adição de parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,5 +11,6 @@
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem molestias iusto quaerat incidunt dolorem temporibus, qui expedita voluptatum tenetur, dolores numquam repudiandae sit, doloremque non nihil accusamus! Optio, quasi tempore.</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum qui delectus ducimus voluptas provident reprehenderit molestias amet. Vero laboriosam aliquid suscipit voluptatem hic libero deleniti obcaecati. Possimus, accusantium error. Porro?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt dicta consectetur veniam, aliquid accusamus ipsum temporibus? Excepturi architecto dignissimos impedit est beatae, accusamus similique vero dolorem incidunt repellat laudantium alias.</p>
 </body>
 </html>
